--- a/AgendaManager.csproj
+++ b/AgendaManager.csproj
@@ -2,13 +2,18 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0-windows10.0.22000.0</TargetFramework>
+    <TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
     <RootNamespace>agenda-manager</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <SupportedOSPlatformVersion>10.0.17763.0</SupportedOSPlatformVersion>
     <ApplicationIcon>icon.ico</ApplicationIcon>
 	<EnableWindowsTargeting>true</EnableWindowsTargeting>
+	<SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
+	<PackageLicenseFile>license.txt</PackageLicenseFile>
+	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+	<NeutralLanguage>en-US</NeutralLanguage>
+	<Title>Agenda Manager</Title>
+	<Version></Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -20,7 +25,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="C:\Users\vieth\Desktop\license.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="Z:\agenda-manager\AgendaLibrary\AgendaLibrary.csproj" />
   </ItemGroup>
 
 </Project>
