--- a/App.config
+++ b/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="Key0" value="0"/>
+		<add key="MONGODB_URI" value="mongodb+srv://homework-database:homework123@cluster0.ygoqv7l.mongodb.net/"/>
+		<add key="LANG" value="VN"/>
 	</appSettings>
 </configuration>
