--- a/AgendaManager/AgendaManager.csproj
+++ b/AgendaManager/AgendaManager.csproj
@@ -21,7 +21,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="icon.ico" />
+    <Compile Remove="bin\**" />
+    <EmbeddedResource Remove="bin\**" />
+    <None Remove="bin\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="App.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="App.config" />
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +43,7 @@
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.20.0" />
     <PackageReference Include="Octokit" Version="7.1.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
@@ -43,6 +54,7 @@
 
   <PropertyGroup>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	<BaseOutputPath>Y:\agenda-manager\bin</BaseOutputPath>
   </PropertyGroup>
 
 </Project>
