more code cleanup, some long functions into AgendaLibrary to clean up main codebase

--- a/AgendaLibrary/AgendaLibrary.csproj
+++ b/AgendaLibrary/AgendaLibrary.csproj
@@ -4,13 +4,19 @@
     <TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <BaseOutputPath>Y:\agenda-manager\bin</BaseOutputPath>
+    <BaseOutputPath>Z:\agenda-manager\bin</BaseOutputPath>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
     <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MongoDB.Bson" Version="2.20.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.20.0" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.20.0" />
     <PackageReference Include="Octokit" Version="7.1.0" />
   </ItemGroup>
 
+	<PropertyGroup>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	</PropertyGroup>
 </Project>
