update with localization

--- a/AgendaManager/App.config
+++ b/AgendaManager/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<appSettings>
 		<add key="MONGODB_URI" value="mongodb+srv://homework-database:homework123@cluster0.ygoqv7l.mongodb.net/"/>
-		<add key="LANG" value="VN"/>
+		<add key="LANG" value="vi-VN"/>
 	</appSettings>
 </configuration>
