--- a/AgendaManager/AgendaManager.csproj
+++ b/AgendaManager/AgendaManager.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
-    <RootNamespace>agenda-manager</RootNamespace>
+    <RootNamespace>AgendaManager</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<EnableWindowsTargeting>true</EnableWindowsTargeting>
