--- a/AgendaManagerUpdater/AgendaManagerUpdater.csproj
+++ b/AgendaManagerUpdater/AgendaManagerUpdater.csproj
@@ -10,11 +10,34 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\King%27s Court - Jose Pavli - Project Wingman Soundtrack %282020%29.wav" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\King's Court - Jose Pavli - Project Wingman Soundtrack (2020).wav" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AgendaLibrary\AgendaLibrary.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Windows.Extensions" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\AgendaManagerUpdater.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>AgendaManagerUpdater.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\AgendaManagerUpdater.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>AgendaManagerUpdater.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 	<PropertyGroup>
