--- a/AgendaManager/App.config
+++ b/AgendaManager/App.config
@@ -1,7 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-	<appSettings>
+	<configSections>
+  <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="AgendaManager.settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </sectionGroup>
+  <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="AgendaManager.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+  </sectionGroup>
+ </configSections>
+ <appSettings>
 		<add key="MONGODB_URI" value="mongodb+srv://homework-database:homework123@cluster0.ygoqv7l.mongodb.net/"/>
 		<add key="LANG" value="vi-VN"/>
 	</appSettings>
+ <applicationSettings>
+  <AgendaManager.settings>
+   <setting name="languagePreference" serializeAs="String">
+    <value>1</value>
+   </setting>
+  </AgendaManager.settings>
+ </applicationSettings>
+ <userSettings>
+  <AgendaManager.Properties.Settings>
+   <setting name="language" serializeAs="String">
+    <value>0</value>
+   </setting>
+  </AgendaManager.Properties.Settings>
+ </userSettings>
 </configuration>
