--- a/AgendaManager/App.config
+++ b/AgendaManager/App.config
@@ -24,6 +24,9 @@
    <setting name="language" serializeAs="String">
     <value>0</value>
    </setting>
+   <setting name="debug" serializeAs="String">
+    <value>False</value>
+   </setting>
   </AgendaManager.Properties.Settings>
  </userSettings>
 </configuration>
