--- a/AgendaManager/Properties/Settings.settings
+++ b/AgendaManager/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="language" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="debug" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
