--- a/AgendaManagerUpdater/AgendaManagerUpdater.csproj
+++ b/AgendaManagerUpdater/AgendaManagerUpdater.csproj
@@ -10,6 +10,7 @@
 	<OutputType>Exe</OutputType>
 	<SelfContained>true</SelfContained>
 	<PublishSingleFile>true</PublishSingleFile>
+	  <EnableWindowsTargeting>True</EnableWindowsTargeting>
   </PropertyGroup>
 
   <ItemGroup>
