--- a/AgendaManager2/App.config
+++ b/AgendaManager2/App.config
@@ -5,13 +5,13 @@
             <section name="AgendaManager2.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
     <userSettings>
         <AgendaManager2.Properties.Settings>
             <setting name="language" serializeAs="String">
                 <value>0</value>
+            </setting>
+            <setting name="debug" serializeAs="String">
+                <value>False</value>
             </setting>
         </AgendaManager2.Properties.Settings>
     </userSettings>
