--- a/AgendaManager2/Properties/Settings.settings
+++ b/AgendaManager2/Properties/Settings.settings
@@ -2,8 +2,11 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="AgendaManager2.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="language" Type="System.String" Scope="User">
+    <Setting Name="language" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="debug" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
 </SettingsFile>
