--- a/AgendaManager2/AgendaManager2.csproj
+++ b/AgendaManager2/AgendaManager2.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AgendaLibrary2\AgendaLibrary2.csproj" />
     <ProjectReference Include="..\AgendaLibrary\AgendaLibrary.csproj" />
   </ItemGroup>
 
